[package]
name = "server"
version = "0.1.0"
authors = ["Nick Chan <nick.chan@lapintechnology.com>"]

[dependencies]
base64 = "0.8.0"
bodyparser = "0.8.0"
futures = "0.1.14"
hyper = "0.11.7"
iron = "0.6.0"
log = "0.3.8"
pretty_env_logger = "0.1.1"
reqwest = "0.8.1"
router = "0.6.0"
rust-argon2 = "0.3.0"
serde = "1.0.21"
serde_derive = "1.0.21"
serde_json = "1.0.6"
serde_qs = "0.3.0"
